--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id = "high-scores">View high scores</h1>
         </div>
         <div class="timer-container">
-        <p id="timer">Timer goes here</p>
+        <p id="timer"></p>
         </div>
     </header>
 
